firebase storage and realtime database

--- a/src/components/references-container.css
+++ b/src/components/references-container.css
@@ -46,3 +46,10 @@
     border-radius: 50%;
 }
 
+.img-placeholder {
+    display: block;
+    width:100px;
+    height: 100px;
+    background-color: lightgray;
+}
+
