--- a/src/client/pages/simple-page.css
+++ b/src/client/pages/simple-page.css
@@ -1,22 +1,22 @@
-article h1 {
+.app article h1 {
     margin-bottom: 3rem;
     color: #6d64e8;
     text-align: center;
 }
 
-.post-item p {
+.app .post-item p {
     margin-bottom: 0rem;
 }
 
-.post-item p:last-child {
+.app .post-item p:last-child {
     margin-bottom: 1rem; 
 }
 
-.post-item p > span {
+.app .post-item p > span {
     font-weight: 700;
 }
 
-.container-buttons-inline {
+.app .container-buttons-inline {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -24,15 +24,15 @@ article h1 {
     margin: 2rem 0rem;
 }
 
-.scroll-container {
+.app .scroll-container {
     position: relative;
 }
 
 @media screen and (min-width: 992px) {
-    article h1 {
+    .app article h1 {
         text-align: left;
     }
-    .container-buttons-inline {
+    .app .container-buttons-inline {
         flex-direction: row;
         justify-content: flex-start;
         gap: 0.5rem;
