--- a/src/index.css
+++ b/src/index.css
@@ -24,12 +24,13 @@ body {
   position: relative;
 }
 
-.App {
+.app {
   display: flex;
   flex-direction: column;
   align-items: center;
   /* height: 100vh; */
   justify-content: flex-start;
+  margin-top: 5rem;
 }
 
 header, footer {
