--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,42 @@ header, footer {
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
+
+.img-circle {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+}
+
+.img-placeholder {
+  display: block;
+  width: 100%;
+  background-color: lightgray;
+}
+
+.img-placeholder.reference {
+  width: 100px;
+  height: 100px;
+}
+
+.img-placeholder.default {
+  height: 500px;
+}
+
+.img-placeholder.websites {
+  width: 100%;
+  height: 0;
+  padding-bottom: 75.4880%;
+}
+
+.image-container {
+  width: 100%;
+  display: block;
+  background-color: white;
+}
+
+.image-container.website{
+  height: 0;
+  padding-bottom: 75.4880%;
+}
+
