--- a/src/client/layout/sidenav/side-nav.css
+++ b/src/client/layout/sidenav/side-nav.css
@@ -20,6 +20,7 @@
 }
 .sticky-navigation-container nav {
     max-height: calc(100vh - 10rem);
+    width: 100%;
     align-items: flex-start;
     overflow-x: hidden;
     overflow-y: auto;
