--- a/src/client/pages/contact/contact.css
+++ b/src/client/pages/contact/contact.css
@@ -15,3 +15,9 @@
 #contact .description-message{
     font-size: 0.625rem;
 }
+
+#contact .reCaptcha-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
